--- a/templates/base.html
+++ b/templates/base.html
@@ -6,4 +6,7 @@
     <body>
         {% block content %}{% endblock %}
     </body>
+    {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">Logout</a>
+    {% endif %}
 </html>
