--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>Log In</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }} {# Renders form fields as paragraphs #}
-        <button type="submit">Log In</button>
-    </form>
+    {% if not user.is_authenticated %}
+        <h2>Log In</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }} {# Renders form fields as paragraphs #}
+            <button type="submit">Log In</button>
+        </form>
+    {% endif %}
 {% endblock %}
