feat: add tailwind and daisy-ui

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,20 @@
 {% extends 'base.html' %}
 
+{% load widget_tweaks %}
+
 {% block content %}
     {% if not user.is_authenticated %}
-        <h2>Log In</h2>
+    <h1 class="text-4xl font-bold text-blue-600">Hello Tailwind!</h1>
         <form method="post">
             {% csrf_token %}
-            {{ form.as_p }} {# Renders form fields as paragraphs #}
+            <fieldset class="fieldset">
+                <legend class="fieldset-legend">Username</legend>
+                {% render_field form.username class="input" %}
+            </fieldset>
+            <fieldset class="fieldset">
+                <legend class="fieldset-legend">Password</legend>
+                {% render_field form.password class="input" %}
+            </fieldset>
             <button type="submit">Log In</button>
         </form>
     {% endif %}
