--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,17 @@
+{% load static tailwind_tags %}
 <html>
     <head>
         <title>{% block title %}PT Home{% endblock %}</title>
         {% block head_scripts %}{% endblock %}
+        {% tailwind_css %}
     </head>
     <body>
         {% block content %}{% endblock %}
     </body>
     {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}">Logout</a>
+        <form action="{% url 'logout' %}" method="POST">
+            {% csrf_token %}
+            <button type="submit" class="btn">Logout</button>
+        </form>
     {% endif %}
 </html>
