fix: improve template folder structure

--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -16,5 +16,6 @@
             </fieldset>
             <button type="submit">Log In</button>
         </form>
+        <a href="{% url 'register' %}" class="link">Register</a>
     {% endif %}
 {% endblock %}
