--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
+{% load widget_tweaks %}
+
 {% block content %}
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form }}
         <button type="submit">Register</button>
     </form>
 {% endblock %}
