--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Home Page{% endblock %}
+
 {% block content %}
     <h2>Home Page</h2>
 {% endblock %}
