--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}User Profile{% endblock %}
+
 {% block content %}
     <p>Hello, {{ user.username }}!</p>
 {% endblock %}
