--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -4,4 +4,5 @@
 
 {% block content %}
     <p>Hello, {{ user.username }}!</p>
+    <a href="{% url 'user.locations' %}" class="link">Locations</a>
 {% endblock %}
