--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -4,5 +4,5 @@
 
 {% block content %}
     <p>Hello, {{ user.username }}!</p>
-    <a href="{% url 'user.locations' %}" class="link">Locations</a>
+    <a href="{% url 'user.add.location' %}" class="link">Add Location</a>
 {% endblock %}
