--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,37 @@
         {% tailwind_css %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
-    <body class="">
+    <body>
+        <div class="navbar bg-base-100 shadow-sm">
+            <div class="navbar-start">
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /> </svg>
+                    </div>
+                    <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-s shadow">
+                        <li><a href="{% url 'home' %}" class="">Home</a></li>
+                        <li>
+                            <details>
+                                <summary>My Stuff</summary>
+                                <ul class="bg-base-100 rounded-t-none p-2">
+                                    <li><a href="{% url 'user.locations' %}">List Locations</a></li>
+                                    <li><a href="{% url 'user.add.location' %}">Add Location</a></li>
+                                    <li><a href="{% url 'profile' %}">My Profile</a></li>
+                                </ul>
+                            </details>
+                        </li>
+                        <li><form action="{% url 'logout' %}" method="POST">
+                            {% csrf_token %}
+                            <button type="submit" class="">Logout</button>
+                        </form></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="navbar-center">
+                <p class="">PT Home</p>
+            </div>
+        </div>
+
         <div class="container mx-auto">
             {% block content %}{% endblock %}
         </div>
