--- a/users/templates/users/location_single.html
+++ b/users/templates/users/location_single.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
+
 {% load static %}
 
 {% block title %}{{ userLocation.display_name }}{% endblock %}
@@ -15,12 +17,18 @@
     {% endfor %}
 </div>
 <h1 class="text-3xl font-light">{{ userLocation.display_name }}</h1>
+<form action="" method="post">
+    {% csrf_token %}
+    {% for field in default_septa_location_form.visible_fields %}
+    {% render_field field class="input w-full" %}
+    {% endfor %}
+    <button class="btn" type="submit">Update Location</button>
+</form>
 <form action="{% url 'user.location.delete' user_location_id=userLocation.id %}" method="POST">
     {% csrf_token %}
     <button class="btn" type="submit">Delete this location</button>
 </form>
 <div id="map-wrapper" style="height: 100%;"></div>
-
 <script>
     (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
         key: "{{ api_key }}",
